Make next piece transparent when dragged.

--- a/www/blockchamp.html
+++ b/www/blockchamp.html
@@ -26,11 +26,12 @@
         display: inline-grid;
         grid-template-columns: 50px 50px 50px 50px 50px;
         grid-gap: 1px;
-        background-color: #fff;
+        /*background-color: #fff;
         color: #444;
         border: solid 5px black;
-        border-radius: 25px;
-        padding: 21px;
+        border-radius: 25px;*/
+        padding: 20px;
+        margin: 30px;
       }
 
       .grid-cell {
@@ -51,6 +52,11 @@
         border-radius: 5px;
         padding: 25px;
         font-size: 150%;
+      }
+
+      .nextpieces-container .grid-cell
+      {
+          background-color: transparent;
       }
 
     </style>
