Sounds of blocks popping off.

--- a/www/blockchamp.html
+++ b/www/blockchamp.html
@@ -60,6 +60,7 @@
       }
 
     </style>
+    <script type="text/javascript" src="sound.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="board.js"></script>
     <script type="text/javascript" src="gridcell.js"></script>
