New sounds. Restart game works by clicking on the "begin game" button.

--- a/www/blockchamp.html
+++ b/www/blockchamp.html
@@ -96,7 +96,7 @@
       </div>
     </div>
     <div id="controls">
-      <input type="button" name="Get Random Piece" value="Get Random Piece" onclick="game.addRandomPiece(game.nextPieces)" style="padding: 10px;
+      <input type="button" name="Begin game" value="Begin game" onclick="game.beginGame();" style="padding: 10px;
     margin: 10px;" />
     </div>
   </body>
