More pieces and sounds

--- a/www/blockchamp.html
+++ b/www/blockchamp.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8">
     <title>My Block Champ Clone</title>
     <style media="screen">
+
+    /*body
+    {
+      background-image: url("imgs/StockSnap_Y110TDLLYM.jpg");
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+    */
       .gameContainer
       {
         width: 100%;
