--- a/www/blockchamp.html
+++ b/www/blockchamp.html
@@ -110,6 +110,10 @@
       <input type="button" name="Begin new game" value="Begin new game" onclick="game.beginGame();" style="padding: 10px;
     margin: 10px;" />
     </div>
-
+    <div id="credits">
+      <p>Original concept by <a href="https://www.arkadium.com/games/block-champ/">Arkadium</a></p>
+      <p>Audio by <a href="https://mixkit.co/free-sound-effects/">mixkit.co</a></p>
+      <p>Developed by <a href="https://www.linkedin.com/in/iambrunocoelho/">Bruno Coelho</a></p>
+    </div>
   </body>
 </html>
