Pay for new piece. Price of points is hardcoded.

--- a/www/blockchamp.html
+++ b/www/blockchamp.html
@@ -109,6 +109,8 @@
     <div id="controls">
       <input type="button" name="Begin new game" value="Begin new game" onclick="game.beginGame();" style="padding: 10px;
     margin: 10px;" />
+    <input type="button" name="Get New Piece (100 pts)" value="Get New Piece (100 pts)" onclick="game.payForNewPiece(100);" style="padding: 10px;
+  margin: 10px;" />
     </div>
     <div id="credits">
       <p>Original concept by <a href="https://www.arkadium.com/games/block-champ/">Arkadium</a></p>
